Paraver colors for graph. XML refactor. New tests structure. PAPI for extrae suggest package. TODO: constraints are broken
git-svn-id: http://compss.bsc.es/svn/compss/framework/trunk@2090 9ab3861e-6c05-4e1b-b5ef-99af60850597